--- a/gui/win32/Main/Frontend.rc
+++ b/gui/win32/Main/Frontend.rc
@@ -65,10 +65,11 @@ END
 //
 
 IDD_FRONTEND_DIALOG DIALOGEX 0, 0, 399, 289
-STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+STYLE DS_MODALFRAME | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | 
+    WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "olsr.org Switch 0.4.7"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     CONTROL         "Tab1",IDC_TAB1,"SysTabControl32",0x0,7,7,383,256
     PUSHBUTTON      "Start",IDC_BUTTON1,228,268,50,14
