objects are deleted prior to and after makeing bin/dll

--- a/src/cfgparser/Makefile
+++ b/src/cfgparser/Makefile
@@ -20,7 +20,7 @@ BISON ?= bison
 FLEX ?= flex
 
 
-all:	$(NAME)
+all:	clean $(NAME)
 
 $(NAME):	$(OBJS)
 		$(CC) $(LDFLAGS) -o $(NAME) $(OBJS) $(LIBS)
