Experimental link quality metric based on a link's packet loss. Define the "USE_LINK_QUALITY" macro to enable the code. Let's see how this compares to the link quality as determined by the hysteresis algorithm.

--- a/Makefile.win32.in
+++ b/Makefile.win32.in
@@ -85,6 +85,8 @@ olsrconf.exe:	$(CONFEXEOBJS)
 
 clean:
 		rm -f *.exe *.dll *.lib *.zip
+		rm -f src/cfgparser/oparse.c src/cfgparser/oparse.h
+		rm -f src/cfgparser/oscan.c
 		find . -name \*~ -exec rm -f {} \;
 		find src -name \*.o -exec rm -f {} \;
 
