Added version scripts to restrict the exported symbols.

--- a/lib/powerinfo/Makefile
+++ b/lib/powerinfo/Makefile
@@ -32,6 +32,7 @@ all: plugin
 
 plugin: $(OBJS)
 	$(CC) $(LDFLAGS) $(MYFLAGS) -g -shared -Wl,-soname,$(NAME) \
+	-Wl,--version-script=version-script.txt \
 	-o $(NAME) $(OBJS) $(LIBS)
 
 
