--- a/src/cfgparser/olsrd.conf.example
+++ b/src/cfgparser/olsrd.conf.example
@@ -58,10 +58,28 @@ AllowNoInt	yes
 #Willingness    	4
 
 # Allow processes like the GUI front-end
-# to connect to the daemon. 'yes' or 'no'
+# to connect to the daemon.
 
-IpcConnect    	no
+IpcConnect
+{
+     # Determines how many simultaneously
+     # IPC connections that will be allowed
+     # Setting this to 0 disables IPC
 
+     MaxConnections  1
+
+     # By default only 127.0.0.1 is allowed
+     # to connect. Here allowed hosts can
+     # be added
+
+     Host            127.0.0.1
+     Host            10.0.0.5
+
+     # Specify entire net-ranges that are 
+     # allowed to connect
+
+     Net             192.168.1.0 255.255.255.0     
+}
 
 # Wether to use hysteresis or not
 # Hysteresis adds more robustness to the
@@ -114,29 +132,6 @@ TcRedundancy	0
 
 MprCoverage	1
 
-# Link Quality Extension
-#
-# This non-standard extension tracks received / missed messages
-# from one-hop neighbours and determines the packet loss. We
-# spread this knowledge all over the mobile network and use it
-# to find reasonable links and routes.
-#
-# IMPORTANT: This feature BREAKS COMPATIBILITY with the OLSR
-# standard. You can thus only use this feature if it is used on
-# ALL NODES in your mobile mesh. Otherwise you'll end up with a
-# mobile mess!
-#
-# Possible values:
-#
-# 0 - off / normal RFC-compliant behaviour
-#
-# 1 - select multi-point relays that offer the lowest packet loss
-#     between us and our two-hop neighbours
-#
-# 2 - additionally select routes that minimize the packet loss
-#     between us and the other nodes in the mobile network
-
-LinkQualityLevel 0
 
 # Olsrd plugins to load
 # This must be the absolute path to the file
