--- a/lib/powerinfo/Makefile
+++ b/lib/powerinfo/Makefile
@@ -11,6 +11,7 @@ LIBDIR ?= $(INSTALL_PREFIX)/usr/lib
 # -fPIC creates position independent code
 MYFLAGS ?= -Wall -fPIC -g # Uncomment -g for debugging
 LIBS ?= -lc -lm
+CFLAGS ?= -g -O2
 
 #Sourcefiles
 #add yours here
@@ -31,12 +32,13 @@ HDRS=	src/olsrd_plugin.h src/olsrd_power.h src/olsr_plugin_io.h
 all: plugin
 
 plugin: $(OBJS)
-	$(CC) $(LDFLAGS) $(MYFLAGS) -g -shared -Wl,-soname,$(NAME) \
+	$(CC) $(LDFLAGS) $(MYFLAGS) -shared -Wl,-soname,$(NAME) \
 	-Wl,--version-script=version-script.txt \
 	-o $(NAME) $(OBJS) $(LIBS)
 
 
 install:
+	strip $(NAME)
 	install -D -m 755 $(NAME) $(LIBDIR)/$(NAME)
 	/sbin/ldconfig -n $(LIBDIR)
 
