Makefile patches by Bruno added

--- a/lib/dot_draw/Makefile
+++ b/lib/dot_draw/Makefile
@@ -6,6 +6,7 @@
 #Alter this file to fit your needs
 
 CC ?= gcc
+STRIP ?= strip
 NAME ?= olsrd_dot_draw.so.0.3
 LIBDIR ?= $(INSTALL_PREFIX)/usr/lib
 # -fPIC creates position independent code
@@ -39,7 +40,7 @@ plugin: $(OBJS)
 
 
 install:
-	strip $(NAME)
+	$(STRIP) $(NAME)
 	install -D -m 755 $(NAME) $(LIBDIR)/$(NAME)
 	/sbin/ldconfig -n $(LIBDIR)
 
