Compiler warning fixes and HTML updates

--- a/lib/httpinfo/Makefile
+++ b/lib/httpinfo/Makefile
@@ -9,7 +9,7 @@ LIBDIR ?= $(INSTALL_PREFIX)/usr/lib
 # -fPIC creates position independent code
 MYFLAGS ?= -Wall -fPIC -g # Uncomment -g for debugging
 LIBS ?= -lc -lm
-CFLAGS ?= -g -O2
+CFLAGS ?= -g -O2 -Wall -Wmissing-prototypes -Wstrict-prototypes
 
 #Sourcefiles
 #add yours here
