--- a/lib/httpinfo/Makefile
+++ b/lib/httpinfo/Makefile
@@ -21,7 +21,8 @@ OBJS=	src/olsrd_plugin.o src/olsrd_httpinfo.o
 
 #Headerfiles
 #add yours here
-HDRS=	src/olsrd_plugin.h src/olsrd_httpinfo.h src/olsr_plugin_io.h
+HDRS=	src/olsrd_plugin.h src/olsrd_httpinfo.h src/olsr_plugin_io.h\
+	src/gfx.h
 
 # -Wl passes options to the linker(-soname,....)
 # Use -lc to link it against C library
