--- a/lib/httpinfo/Makefile
+++ b/lib/httpinfo/Makefile
@@ -2,11 +2,23 @@
 # HTTPINFO PLUGIN BY ANDREAS TØNNESEN #
 #######################################
 
+
+OS ?= linux
 CC ?= gcc
 STRIP ?= strip
 LIBDIR ?= $(INSTALL_PREFIX)/usr/lib
 # -fPIC creates position independent code
 
+
+ifeq ($(OS), linux)
+NAME ?= olsrd_httpinfo.so.0.1
+NAMEFLAGS ?= -Wl,-soname,$(NAME)
+CFLAGS ?= -g -O2 -Dlinux -Wall -Wmissing-prototypes -Wstrict-prototypes
+LDFLAGS ?= -fPIC -shared
+LIBS ?= -lc -lm
+INSTALL_LIB = 	install -D -m 755 $(NAME) $(LIBDIR)/$(NAME);\
+		/sbin/ldconfig -n $(LIBDIR)
+else
 ifeq ($(OS), win32)
 NAME ?= olsrd_httpinfo.dll
 NAMEFLAGS ?= -o $(NAME)
@@ -14,12 +26,8 @@ CFLAGS ?= -g -O2 -DWIN32 -mno-cygwin -I../../src/win32 -Wall -Wmissing-prototype
 LDFLAGS ?= -mno-cygwin -shared
 LIBS ?= -lws2_32
 COMPATOBJ = ../../src/win32/compat.o
-else
-NAME ?= olsrd_httpinfo.so.0.1
-NAMEFLAGS ?= -Wl,-soname,$(NAME)
-CFLAGS ?= -g -O2 -Dlinux -Wall -Wmissing-prototypes -Wstrict-prototypes
-LDFLAGS ?= -fPIC -shared
-LIBS ?= -lc -lm
+INSTALL_LIB = 	cp $(NAME) ../..
+endif
 endif
 
 #Sourcefiles
@@ -46,8 +54,7 @@ plugin: $(OBJS)
 
 install:
 	$(STRIP) $(NAME)
-	install -D -m 755 $(NAME) $(LIBDIR)/$(NAME)
-	/sbin/ldconfig -n $(LIBDIR)
+	$(INSTALL_LIB)
 
 clean:
 	rm -f $(OBJS) $(NAME)
