The plugin now compiles for win32 as well :)

--- a/lib/dyn_gw/Makefile
+++ b/lib/dyn_gw/Makefile
@@ -71,6 +71,7 @@ help:
 	@echo ' ---------------------------------  '
 	@echo ' linux - GNU/Linux                  '
 	@echo ' fbsd  - FreeBSD                    '
+	@echo ' win32 - Windows                    '
 	@echo ' ---------------------------------  '
 	@echo ' Example - build for FreeBSD:       '
 	@echo ' gmake OS=fbsd                      '
