--- a/lib/powerinfo/Makefile
+++ b/lib/powerinfo/Makefile
@@ -34,7 +34,17 @@ INSTALL_LIB = install -m 755 $(NAME) $(LIBDIR)/$(NAME);\
 	/sbin/ldconfig
 all:	plugin
 else
+ifeq ($(OS), win32)
+NAME ?= olsrd_power.dll
+MYFLAGS ?= -g -fPIC -DWIN32 -mno-cygwin -I../../src/win32 -Wall -Wmissing-prototypes -Wstrict-prototypes
+CFLAGS ?= -O2
+CFLAGS += $(MYFLAGS)
+LDFLAGS ?= -mno-cygwin -shared
+LIBS ?= -lws2_32
+INSTALL_LIB = 	cp $(NAME) ../..
+else
 all: 	help
+endif
 endif
 endif
 
