--- a/lib/secure/Makefile
+++ b/lib/secure/Makefile
@@ -1,36 +1,50 @@
 
 #############################################
-# EXAMPLE MAKEFILE TO CREATE A OLSRD PLUGIN #
+#          OLSR.ORG SECURE PLUGIN           #
 #############################################
 
-#Alter this file to fit your needs
 
 CC ?= gcc
 STRIP ?= strip
+
+ifndef OS
+all:		help
+endif
+
+ifeq ($(OS), linux)
 NAME ?= olsrd_secure.so.0.4
 LIBDIR ?= $(INSTALL_PREFIX)/usr/lib
-# -fPIC creates position independent code
 MYFLAGS ?= -Wall -fPIC -g #-DDEBUG# Uncomment -g for debugging
 LIBS ?= -lc -lssl -lcrypto -lm
 CFLAGS ?= -fPIC -g -O2
+INSTALL_LIB = install -D -m 755 $(NAME) $(LIBDIR)/$(NAME);\
+	/sbin/ldconfig -n $(LIBDIR)
+
+all:	plugin
+else
+ifeq ($(OS), fbsd)
+NAME ?= olsrd_secure.so.0.4
+LIBDIR ?= $(INSTALL_PREFIX)/usr/lib
+MYFLAGS ?= -Wall -fPIC -g #-DDEBUG# Uncomment -g for debugging
+LIBS ?= -lc -lssl -lcrypto -lm
+CFLAGS ?= -fPIC -g -O2
+INSTALL_LIB = install -m 755 $(NAME) $(LIBDIR)/$(NAME);\
+	/sbin/ldconfig
+
+all:	plugin
+else
+all: 	help
+endif
+endif
 
 #Sourcefiles
-#add yours here
 SRCS=	src/olsrd_plugin.c src/olsrd_secure.c
 
 #Objectfiles
-#add yours here
 OBJS=	src/olsrd_plugin.o src/olsrd_secure.o
 
 #Headerfiles
-#add yours here
 HDRS=	src/olsrd_plugin.h src/olsrd_secure.h src/olsr_plugin_io.h
-
-# -Wl passes options to the linker(-soname,....)
-# Use -lc to link it against C library
-# not 100% sure if this is neccesary
-
-all: plugin
 
 
 plugin: $(OBJS)
@@ -41,11 +55,26 @@ plugin: $(OBJS)
 
 install:
 	$(STRIP) $(NAME)
-	install -D -m 755 $(NAME) $(LIBDIR)/$(NAME)
-	/sbin/ldconfig -n $(LIBDIR)
+	$(INSTALL_LIB)
 
 clean:
 	rm -f $(OBJS) $(NAME)
+
+help:
+	@echo
+	@echo '**** olsr.org secure plugin Make ***'
+	@echo ' You must provide a valid target OS '
+	@echo ' by setting the OS variable! Valid  '
+	@echo ' target OSes are:                   '
+	@echo ' ---------------------------------  '
+	@echo ' linux - GNU/Linux                  '
+	@echo ' fbsd  - FreeBSD                    '
+	@echo ' win32 - Windows                    '
+	@echo ' ---------------------------------  '
+	@echo ' Example - build for FreeBSD:       '
+	@echo ' gmake OS=fbsd                      '
+	@echo '************************************'
+	@echo
 
 src/olsrd_plugin.o: $(HDRS)
 
